--- a/IntegratorTransfer/appsettings.json
+++ b/IntegratorTransfer/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "TransferQueueSetting": {
-    "HostName": "localhost"
+    "HostName": "localhost",
+    "QueueName": "Transfer"
   },
   "ConnectionStrings": {
     "TransaccionFinanciera": ""
